--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
